rename img folder, add js folder, adjust files for img

--- a/authors.html
+++ b/authors.html
@@ -21,7 +21,7 @@
         <!-- lg = large breakpoint, navbar-light = make text dark, nb-background-color = custom css -->
         <div class="container">
             <a href="index.html" class="navbar-brand">
-                <img src="images/plant.png" alt="Plant Logo" class="d-inline-block align-text-top w-25">
+                <img src="img/plant.png" alt="Plant Logo" class="d-inline-block align-text-top w-25">
             </a>
 
             <!-- Hamburger icon from Bootstrap -->
@@ -59,7 +59,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
                 <div class="card about">
-                    <img class="card-img-top" src="images/woman1.jpg" alt="Name 1">
+                    <img class="card-img-top" src="img/woman1.jpg" alt="Name 1">
                     <div class="card-body">
                         <h4 class="card-title">Student Name</h4>
                         <h5>Class: BME</h5>
@@ -70,7 +70,7 @@
 
             <div class="col">
                 <div class="card about">
-                    <img class="card-img-top" src="images/man1.png" alt="Name 2">
+                    <img class="card-img-top" src="img/man1.png" alt="Name 2">
                     <div class="card-body">
                         <h4 class="card-title">Student Name</h4>
                         <h5>Class: BME</h5>
@@ -81,7 +81,7 @@
 
             <div class="col">
                 <div class="card about">
-                    <img class="card-img-top" src="images/woman2.jpg" alt="Name 3">
+                    <img class="card-img-top" src="img/woman2.jpg" alt="Name 3">
                     <div class="card-body">
                         <h4 class="card-title">Student Name</h4>
                         <h5>Class: SE</h5>
@@ -92,7 +92,7 @@
 
             <div class="col">
                 <div class="card about">
-                    <img class="card-img-top" src="images/man2.jpg" alt="Name 4">
+                    <img class="card-img-top" src="img/man2.jpg" alt="Name 4">
                     <div class="card-body">
                         <h4 class="card-title">Student Name</h4>
                         <h5>Class: SE</h5>
