--- a/procedure.html
+++ b/procedure.html
@@ -21,7 +21,7 @@
         <!-- lg = large breakpoint, navbar-light = make text dark, nb-background-color = custom css -->
         <div class="container">
             <a href="index.html" class="navbar-brand">
-                <img src="images/plant.png" alt="Plant Logo" class="d-inline-block align-text-top w-25">
+                <img src="img/plant.png" alt="Plant Logo" class="d-inline-block align-text-top w-25">
             </a>
 
             <!-- Hamburger icon from Bootstrap -->
@@ -55,32 +55,32 @@
             </div>
             <hr><br>
 
-            <table class="table table-hover table-borderless">
+            <table class="table table-secondary table-hover table-borderless">
                 <tbody>
                     <tr>
                         <th scope="row"><h2>Step 1</h2></th>
                         <td><p class="howTo">Fill 2 boxes with 20 cups each, arranged in a 5x4 grid</p></td>
-                        <td class="text-center"><img src="images/pythonLogo.png" alt="Python Logo"></td>
+                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
                     </tr>
                     <tr>
                         <th scope="row"><h2>Step 2</h2></th>
                         <td><p class="howTo">Arrange both boxes directly below the fluourescent lighting setup</p></td>
-                        <td class="text-center"><img src="images/pythonLogo.png" alt="Python Logo"></td>
+                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
                     </tr>
                     <tr>
                         <th scope="row"><h2>Step 3</h2></th>
                         <td><p class="howTo">Plant 30 seeds in each cup</p></td>
-                        <td class="text-center"><img src="images/pythonLogo.png" alt="Python Logo"></td>
+                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
                     </tr>
                     <tr>
                         <th scope="row"><h2>Step 4</h2></th>
                         <td><p class="howTo">Fertilize, water, provide vitamin C, and maintain seeds until they are 2 inches tall</p></td>
-                        <td class="text-center"><img src="images/pythonLogo.png" alt="Python Logo"></td>
+                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
                     </tr>
                     <tr>
                         <th scope="row"><h2>Step 5</h2></th>
                         <td><p class="howTo">Perform measurements of phototropism</p></td>
-                        <td class="text-center"><img src="images/pythonLogo.png" alt="Python Logo"></td>
+                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
                     </tr>
                 </tbody>
             </table>
