--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- lg = large breakpoint, navbar-light = make text dark, nb-background-color = custom css -->
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img src="images/plant.png" alt="Plant Logo" class="d-inline-block align-text-top w-25">
+                <img src="img/plant.png" alt="Plant Logo" class="d-inline-block align-text-top w-25">
             </a>
 
             <!-- Hamburger icon from Bootstrap -->
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-sm-6 p-0 flex align-items-center">
                     <!-- img-fluid = won't expand image larger than the container and will scale it down if necessary -->
-                    <img class="img-fluid" src="images/IMG-5509.jpg" alt="Shark River">
+                    <img class="img-fluid" src="img/IMG-5509.jpg" alt="Shark River">
                 </div>
                 <div class="col-sm-6 p-0 flex align-items-center">
                     <div class="container">
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-sm-4 p-3 ">
                     <!-- pt-3 = padding top -->
-                    <img class="img-fluid" src="images/19418.jpeg" alt="Water Temperature Graph">
+                    <img class="img-fluid" src="img/19418.jpeg" alt="Water Temperature Graph">
                 </div>
                 <div class="col-sm-8 p-3 ">
                     <!-- pt-3 = padding top -->
@@ -93,14 +93,14 @@
                 </div>
                 <div class="col-sm-4 p-3 ">
                     <!-- pt-3 = padding top -->
-                    <img class="img-fluid" src="images/waterMap.jpg" alt="Water Map">
+                    <img class="img-fluid" src="img/waterMap.jpg" alt="Water Map">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4 p-3 ">
                     <!-- pt-3 = padding top -->
-                    <img class="img-fluid" src="images/Phytoplankton_PNAS.jpg" alt="Water Temperature Graph">
+                    <img class="img-fluid" src="img/Phytoplankton_PNAS.jpg" alt="Water Temperature Graph">
                 </div>
                 <div class="col-sm-8 p-3 ">
                     <!-- pt-3 = padding top -->
