add to the 6th step proced

--- a/procedure.html
+++ b/procedure.html
@@ -79,7 +79,7 @@
                     </tr>
                     <tr>
                         <th scope="row"><h2>Step 5</h2></th>
-                        <td><p class="howTo">Perform measurements of phototropism</p></td>
+                        <td><p class="howTo">Perform measurements of phototropism and calculate statistical analysis of the data</p></td>
                         <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
                     </tr>
                 </tbody>
