--- a/authors.html
+++ b/authors.html
@@ -59,10 +59,10 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
                 <div class="card about">
-                    <img class="card-img-top" src="img/woman1.jpg" alt="Name 1">
+                    <img class="card-img-top" src="img/man1.png" alt="Name 1">
                     <div class="card-body">
-                        <h4 class="card-title">Student Name</h4>
-                        <h5>Class: BME</h5>
+                        <h4 class="card-title">Raymond Jiang</h4>
+                        <h5>Class: SE</h5>
                         <p class="card-text">Description of what that person contributed to the project</p>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
 
             <div class="col">
                 <div class="card about">
-                    <img class="card-img-top" src="img/man1.png" alt="Name 2">
+                    <img class="card-img-top" src="img/woman1.jpg" alt="Name 2">
                     <div class="card-body">
                         <h4 class="card-title">Student Name</h4>
                         <h5>Class: BME</h5>
