update color scheme, add to procedure, add step imgs

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         <!-- headerbg = custom css bg color, p-2 = padding of 2px -->
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 p-0 flex align-items-center">
+                <div class="col-sm-6 p-0 flex align-items-center align-middle">
                     <!-- img-fluid = won't expand image larger than the container and will scale it down if necessary -->
-                    <img class="img-fluid w-75" src="img/plant1.png" alt="Shark River">
+                    <img class="img-fluid w-75" src="img/plant1.png" alt="plant1">
                 </div>
                 <div class="col-sm-6 p-0 flex align-items-center">
-                    <div class="container">
-                        <h1 class="display-4">Effects of supplementation of ascorbic acid on the success and speed of phototropism in Lepidium sativum</h1>
-                        <h2 class="">R. Jiang, M. Rambaud, 2023</h2>
+                    <div class="container align-middle">
+                        <h1 class="display-5 showColor">Effects of supplementation of ascorbic acid on the success and speed of phototropism in Lepidium sativum</h1>
+                        <h2 class="showColor">Raymond Jiang</h2>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-sm-4 p-3 ">
                     <!-- pt-3 = padding top -->
-                    <img class="img-fluid" src="img/plantSunlight.jpg" alt="Water Temperature Graph">
+                    <img class="img-fluid" src="img/plantSunlight.jpg" alt="Plant with sunlight">
                 </div>
                 <div class="col-sm-8 p-3 ">
                     <!-- pt-3 = padding top -->
@@ -82,7 +82,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-8 p-3 ">
+                <div class="col-sm-8 p-3">
                     <!-- pt-3 = padding top -->
                     <h1 class="ovPadRight">Rationale</h1> 
                     <p class="lead overview-font ovPadRight">A study that addresses these questions could yield lots of potential for future research and commercial application.
@@ -91,18 +91,18 @@
                         Therefore, the presented study addresses this unanswered field of botany, where studies and data are lacking.
                         The study examined the success and rate at which garden cress undergoes phototropism after receiving varying quantities of supplements of vitamin C.</p>
                 </div>
-                <div class="col-sm-4 p-3 ">
+                <div class="col-sm-4 p-3">
                     <!-- pt-3 = padding top -->
-                    <img class="img-fluid" src="img/phototropism.jpg" alt="Water Map">
+                    <img class="img-fluid" src="img/phototropism.jpg" alt="Phototropism">
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm-4 p-3 ">
+                <div class="col-sm-4 p-3">
                     <!-- pt-3 = padding top -->
-                    <img class="img-fluid" src="img/cressPhototropism.jpg" alt="Water Temperature Graph">
+                    <img class="img-fluid" src="img/cressPhototropism.jpg" alt="Cress phototropism">
                 </div>
-                <div class="col-sm-8 p-3 ">
+                <div class="col-sm-8 p-3">
                     <!-- pt-3 = padding top -->
                     <h1 class="ovPadLeft">Abstract</h1> 
                     <p class="lead overview-font ovPadLeft">Vitamin C has been known to play a major role in controlling and regulating a variety of processes throughout plants, including growth and producing the auxins responsible for phototropism.
