--- a/procedure.html
+++ b/procedure.html
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- How to use the sensor -->
-    <section class="procedure">
+    <section class="procedure pb-4">
         <div class="container">
             <br>
             <div class="text-center">
@@ -55,32 +55,39 @@
             </div>
             <hr><br>
 
-            <table class="table table-secondary table-hover table-borderless">
-                <tbody>
-                    <tr>
-                        <th scope="row"><h2>Step 1</h2></th>
-                        <td><p class="howTo">Fill 2 boxes with 20 cups each, arranged in a 5x4 grid</p></td>
-                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
+            <table class="table table-hover text-center table-light table-bordered border-dark-subtle">
+                <thead>
+                    <tr class="table-success">
+                        <th><h3>Step</h3></th>
+                        <th><h3>Description</h3></th>
+                        <th><h3>Image</h3></th>
                     </tr>
-                    <tr>
-                        <th scope="row"><h2>Step 2</h2></th>
-                        <td><p class="howTo">Arrange both boxes directly below the fluourescent lighting setup</p></td>
-                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
+                </thead>
+                <tbody class="table-group-divider">
+                    <tr class="align-middle">
+                        <th scope="row" class="table-secondary"><h2>1</h2></th>
+                        <td><p class="howTo">Fill 2 boxes with 20 cups each, arranged in a 5x4 grid directly below the fluourescent lighting setup</p></td>
+                        <td class="text-center"><img src="img/step1.jpg" alt="Python Logo" class="small-20"></td>
                     </tr>
-                    <tr>
-                        <th scope="row"><h2>Step 3</h2></th>
+                    <tr class="align-middle">
+                        <th scope="row" class="table-secondary"><h2>2</h2></th>
                         <td><p class="howTo">Plant 30 seeds in each cup</p></td>
-                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
+                        <td class="text-center"><img src="img/step2.jpg" alt="Python Logo" class="small-20"></td>
                     </tr>
-                    <tr>
-                        <th scope="row"><h2>Step 4</h2></th>
+                    <tr class="align-middle">
+                        <th scope="row" class="table-secondary"><h2>3</h2></th>
                         <td><p class="howTo">Fertilize, water, provide vitamin C, and maintain seeds until they are 2 inches tall</p></td>
-                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
+                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo" class="small-20"></td>
                     </tr>
-                    <tr>
-                        <th scope="row"><h2>Step 5</h2></th>
-                        <td><p class="howTo">Perform measurements of phototropism and calculate statistical analysis of the data</p></td>
-                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo"></td>
+                    <tr class="align-middle">
+                        <th scope="row" class="table-secondary"><h2>4</h2></th>
+                        <td><p class="howTo">Flip boxes 180 degrees and measure angles of each plant cup for a 1 hour period in 15 minute intervals</p></td>
+                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo" class="small-20"></td>
+                    </tr>
+                    <tr class="align-middle">
+                        <th scope="row" class="table-secondary"><h2>5</h2></th>
+                        <td><p class="howTo">Calculate statistical analysis of the data, which included total change in angle and change over each interval</p></td>
+                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo" class="small-20"></td>
                     </tr>
                 </tbody>
             </table>
