--- a/authors.html
+++ b/authors.html
@@ -56,14 +56,14 @@
         </div>
 
         <!-- Cards organized in 2x2 format -->
-        <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="row row-cols-1 row-cols-md-2 g-4 pb-4">
             <div class="col">
                 <div class="card about">
                     <img class="card-img-top" src="img/man1.png" alt="Name 1">
                     <div class="card-body">
                         <h4 class="card-title">Raymond Jiang</h4>
                         <h5>Class: SE</h5>
-                        <p class="card-text">Description of what that person contributed to the project</p>
+                        <p class="card-text">He carried out all research experiments and calculated all statistcal analysis involved in the project.</p>
                     </div>
                 </div>
             </div>
@@ -72,31 +72,9 @@
                 <div class="card about">
                     <img class="card-img-top" src="img/woman1.jpg" alt="Name 2">
                     <div class="card-body">
-                        <h4 class="card-title">Student Name</h4>
-                        <h5>Class: BME</h5>
-                        <p class="card-text">Description of what that person contributed to the project</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card about">
-                    <img class="card-img-top" src="img/woman2.jpg" alt="Name 3">
-                    <div class="card-body">
-                        <h4 class="card-title">Student Name</h4>
-                        <h5>Class: SE</h5>
-                        <p class="card-text">Description of what that person contributed to the project</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card about">
-                    <img class="card-img-top" src="img/man2.jpg" alt="Name 4">
-                    <div class="card-body">
-                        <h4 class="card-title">Student Name</h4>
-                        <h5>Class: SE</h5>
-                        <p class="card-text">Description of what that person contributed to the project</p>
+                        <h4 class="card-title">Ms. Rambaud</h4>
+                        <h5>Research Mentor</h5>
+                        <p class="card-text">She mentored and aided Raymond with the research project. She helped to brainstorm ideas, carry out research, and consulted him throughout the entire process.</p>
                     </div>
                 </div>
             </div>
