update images on procedure

--- a/procedure.html
+++ b/procedure.html
@@ -67,27 +67,27 @@
                     <tr class="align-middle">
                         <th scope="row" class="table-secondary"><h2>1</h2></th>
                         <td><p class="howTo">Fill 2 boxes with 20 cups each, arranged in a 5x4 grid directly below the fluourescent lighting setup</p></td>
-                        <td class="text-center"><img src="img/step1.jpg" alt="Python Logo" class="small-20"></td>
+                        <td class="text-center px-0"><img src="img/step1CroppedResized.jpg" alt="Python Logo" class="small-20"></td>
                     </tr>
-                    <tr class="align-middle">
+                   <tr class="align-middle">
                         <th scope="row" class="table-secondary"><h2>2</h2></th>
                         <td><p class="howTo">Plant 30 seeds in each cup</p></td>
-                        <td class="text-center"><img src="img/step2.jpg" alt="Python Logo" class="small-20"></td>
+                        <td class="text-center"><img src="img/step2Resized.jpg" alt="Python Logo" class="small-20"></td>
                     </tr>
                     <tr class="align-middle">
                         <th scope="row" class="table-secondary"><h2>3</h2></th>
                         <td><p class="howTo">Fertilize, water, provide vitamin C, and maintain seeds until they are 2 inches tall</p></td>
-                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo" class="small-20"></td>
+                        <td class="text-center"><img src="img/step3Cropped.jpg" alt="Python Logo" class="small-20"></td>
                     </tr>
                     <tr class="align-middle">
                         <th scope="row" class="table-secondary"><h2>4</h2></th>
                         <td><p class="howTo">Flip boxes 180 degrees and measure angles of each plant cup for a 1 hour period in 15 minute intervals</p></td>
-                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo" class="small-20"></td>
+                        <td class="text-center"><img src="img/plant1Cropped.png" alt="Python Logo" class="small-20"></td>
                     </tr>
                     <tr class="align-middle">
                         <th scope="row" class="table-secondary"><h2>5</h2></th>
                         <td><p class="howTo">Calculate statistical analysis of the data, which included total change in angle and change over each interval</p></td>
-                        <td class="text-center"><img src="img/pythonLogo.png" alt="Python Logo" class="small-20"></td>
+                        <td class="text-center"><img src="img/step5Cropped.jpg" alt="Python Logo" class="small-20"></td>
                     </tr>
                 </tbody>
             </table>
