--- a/authors.html
+++ b/authors.html
@@ -59,7 +59,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4 pb-4">
             <div class="col">
                 <div class="card about">
-                    <img class="card-img-top" src="img/man1.png" alt="Name 1">
+                    <img class="card-img-top" src="img/raymond.jpeg" alt="Name 1">
                     <div class="card-body">
                         <h4 class="card-title">Raymond Jiang</h4>
                         <h5>Class: SE</h5>
@@ -70,7 +70,7 @@
 
             <div class="col">
                 <div class="card about">
-                    <img class="card-img-top" src="img/woman1.jpg" alt="Name 2">
+                    <img class="card-img-top" src="img/rambaud.jpg" alt="Name 2">
                     <div class="card-body">
                         <h4 class="card-title">Ms. Rambaud</h4>
                         <h5>Research Mentor</h5>
