--- a/result.html
+++ b/result.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Result</title>
+    <script src="js/lineChart.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <canvas id="myChart"></canvas>
+    </div>
 </body>
 </html>
